# dotafts

./: .gitignore  .prettierrc  Cargo.toml  Dockerfile  README.md  Shuttle.toml  docker-compose.database.yml  docker-compose.yml  index.html  minify.js  package.json  pnpm-lock.yaml
.daa/: AA-01.markdown
.github/workflows/: shuttle.yml
.sqlx/: query-43505e097814014d6a524b08f121c24f16134d90adeea76e66eefe64d9d11a11.json
blog/: index.html
css/: blog.css  button.css  fonts.css  global.css  hero.css  index.css  root.css  splash.css
data/: app.json
data/blogs/: 01.conf.json
data/posts/: all.json
docs/: LINKS.md  TODO.md
dotafts-www/: eslint.config.mjs  index.html  minify.js  package.json  pnpm-lock.yaml
dotafts-www/.storybook/: main.js  preview-head.html  preview.js
dotafts-www/blog/: index.html
dotafts-www/css/: global.css  splash.css
dotafts-www/data/: app.json
dotafts-www/docs/: META.md
dotafts-www/markup/: Header.html  SplashPage.html  Template.html
dotafts-www/scripts/: copyVendor.js
markdown/: 01.md  02.md  03.md  04.md  05.md
markdown/ESSAYS/: 01.md
migrations/: 20240625020112_events.sql  20240625022840_users.sql  20240625022844_authors.sql  20240625022856_posts.sql
public/: index.html
public/tv/: 01.md  03.md  05.md
sql/: init.sql
src/: app_info.rs  file_x.rs  main.rs  routes.rs  service_info.rs
src/analytics/: index.js
src/clients/: AppConfig.js  Markdown.js  Query.js  workers.js
src/config/: mod.rs
src/database/: mod.rs
src/events/: index.js  (+1 more)
src/lib/: index.js  (+3 more)
www/: package.json  pnpm-lock.yaml  tsconfig.json
(+157 files in other folders)
