[package]
name = "dotafts-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
glob = "0.3.1"
pulldown-cmark = "0.11.0"
env_logger = "0.11.3"
log = "0.4.21"
futures-util = "0.3.30"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "macros", "time"] }
shuttle-actix-web = "0.46"
shuttle-runtime = "0.46"
shuttle-shared-db = { version = "0.46.0", features = ["postgres", "sqlx"] }
chrono = "0.4.38"
